@@ -1,3 +1,8 @@
+2012-01-30  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/56138
+	* gfortran.dg/allocatable_function_6.f90: New.
+
 2013-01-29  Janus Weil  <janus@gcc.gnu.org>
 	    Mikael Morin <mikael@gcc.gnu.org>
 
