@@ -1,3 +1,9 @@
+2012-01-30  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/56138
+	* trans-decl.c (gfc_trans_deferred_vars): Fix deferred-length
+	results for functions without extra result variable.
+
 2013-01-29  Janus Weil  <janus@gcc.gnu.org>
 	    Mikael Morin <mikael@gcc.gnu.org>
 
